--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "backend": "nodemon backend/server.js",
+    "frontend": "react-scripts start",
+    "start": "npm-run-all --parallel backend frontend",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
