--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "cloudinary": "^1.34.0",
     "cors": "^2.8.5",
-    "nodemon": "^2.0.20",
     "dotenv": "^16.0.3",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
@@ -19,12 +19,13 @@
     "react-router": "^6.8.1",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "streamifier": "^0.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "backend": "nodemon backend/server.js",
     "frontend": "react-scripts start",
-    "start": "npm run backend frontend",
+    "start": "npm-run-all --parallel backend frontend",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
