--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cloudinary": "^1.34.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
+    "jquery": "^3.6.4",
     "mongoose": "^6.9.1",
     "nodemailer": "^6.9.1",
     "nodemailer-smtp-transport": "^2.7.4",
