--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "chart.js": "^4.2.1",
     "cloudinary": "^1.34.0",
     "cors": "^2.8.5",
+    "d3": "^7.8.4",
     "dotenv": "^16.0.3",
     "jquery": "^3.6.4",
     "mongoose": "^6.9.1",
@@ -25,6 +26,9 @@
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.1",
+    "react-vis": "^1.11.12",
+    "rechart": "^0.0.1",
+    "recharts": "^2.5.0",
     "streamifier": "^0.1.1",
     "sweetalert": "^2.1.2",
     "sweetalert2": "^11.7.3",
